[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-tutorial"
version = "0.1.0"
description = "A Python project for experimenting with RAG workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "langchain[openai]>=1.0",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.0",
]

[project.scripts]
askswift = "rag_tutorial.main:main"

[tool.setuptools.packages.find]
where = ["src"]
